--- a/react-one/src/App.css
+++ b/react-one/src/App.css
@@ -1,44 +1,22 @@
-.App {
-  text-align: center;
+.menu{
+  width: 80%;
+  text-align: left;
+  position: fixed;
+  height: 100vh;
+  left: -100%;
+  list-style: none;
+  transition: 0.5s;
+  background-color: yellow;
 }
-.container {
-  text-align: center;
-  border: 2px solid black;
-  height: 100px;
-  width: 300px;
-  margin: auto;
+.activeMenu{
+  left: 0%;
 }
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.menu ul li{
+  list-style: none;
+  padding: 10px 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.micon{
+  position: absolute;
+  right: 10px;
 }
